// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Paragraph Component does not render when content is empty 1`] = `
<div>
  


</div>
`;

exports[`Paragraph Component renders HTML tags in content when allow_html is true 1`] = `
<div>
  


  <div
    class="ct-paragraph ct-theme-light ct-paragraph--regular  "
  >
    
    
    <strong>
      Sample content
    </strong>
      
  </div>
</div>
`;

exports[`Paragraph Component renders with optional attributes 1`] = `
<div>
  


  <div
    class="ct-paragraph ct-theme-dark ct-paragraph--large  custom-class"
    data-test="true"
  >
    
    Sample content  
  </div>
</div>
`;

exports[`Paragraph Component renders with required attributes 1`] = `
<div>
  


  <div
    class="ct-paragraph ct-theme-light ct-paragraph--regular  "
  >
    
    Sample content  
  </div>
</div>
`;

exports[`Paragraph Component strips HTML content 1`] = `
<div>
  


  <div
    class="ct-paragraph ct-theme-light ct-paragraph--regular  "
  >
    
    Start &lt;strong&gt;prefix&lt;/strong&gt; middle &lt;script&gt;alert("XSS")&lt;/script&gt; end  
  </div>
</div>
`;
